# bognor-regis

./: .gitignore  Makefile.am  README  autogen.sh  configure.ac
bognor-regis/: .gitignore  Makefile.am  br-iface-player.c  br-iface-player.h  br-marshal.list  br-player.c  br-player.h  br-queue.c  br-queue.h
data/: .gitignore  Makefile.am  bognor-regis.pc.in  org.moblin.BognorRegis.service.in
examples/: .gitignore  Makefile.am  bognor-regis.c
interfaces/: BognorPlayer.xml  BognorQueue.xml  BognorQueueManager.xml  Makefile.am
po/: .gitignore  POTFILES.in  ar.po  ast.po  bn_IN.po  ca.po  cs.po  da.po  de.po  en_GB.po  es.po  eu.po  fi.po  fr.po  gl.po  hu.po  id.po  it.po  ja.po  ko.po  ms.po  nl.po  pa.po  pl.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sv.po  th.po  tr.po  uk.po  wa.po  zh_CN.po  zh_TW.po
scpd/: Makefile.am  MediaRenderer2.xml
src/: .gitignore  Makefile.am  bgr-item.c  bgr-item.h  bgr-tracker-client.c  bgr-tracker-client.h  bognor-av-transport.c  bognor-av-transport.h  bognor-connection-manager.c  bognor-connection-manager.h  bognor-last-change.c  bognor-last-change.h  bognor-local-queue-gst.c  bognor-local-queue-helix.c  bognor-local-queue.h  bognor-queue-item.c  bognor-queue-item.h  bognor-queue-manager.c  bognor-queue-manager.h  bognor-queue.c  bognor-queue.h  bognor-render-control.c  bognor-render-control.h  bognor-source-manager.c  bognor-source-manager.h  bognor-upnp-cp.c  bognor-upnp-cp.h  main.c
